--- a/fimco/pochi/templates/pochi/earnings.html
+++ b/fimco/pochi/templates/pochi/earnings.html
@@ -4,6 +4,7 @@
     <link href="/static/pochi/css/navyblue.css" rel="stylesheet" type="text/css" />
 {% endblock %}
 {% load get_second %}
+{% load djmoney %}
 {% block content %}
     <section id="middle">
         <div id="content" class="dashboard padding-20">
@@ -32,13 +33,13 @@
                         <div class="panel-heading">
                             <span class="title elipsis">
                                 {% if page == 'rates' %}
-                                    <strong>Current POCHI Rates</strong>
+                                    <strong>POCHI Rates</strong>
                                 {% elif page == 'daily' %}
                                     <strong>Daily Earnings</strong>
                                 {% elif page == 'monthly' %}
                                     <strong>Monthly Earnings</strong>
                                 {% elif page == 'total' %}
-                                    <strong>Total Earnings</strong>
+                                    <strong>Cumulative Earnings</strong>
                                 {% endif %}
                             </span>
                         </div>
@@ -52,18 +53,18 @@
                                                     <input type="text"
                                                        class="form-control rangepicker"
                                                        name="{{ page }}_range"
-                                                       value="{{ last_month|date:'m/d/Y' }} - {% now 'm/d/Y' %}"
+                                                       value="{{ start_date|date:'m/d/Y' }} - {{ end_date|date:'m/d/Y' }}"
                                                        data-format="yyyy-mm-dd"
-                                                       data-from="{{ last_month|date:'Y-m-d' }}"
-                                                       data-to="{% now 'Y-m-d' %}">
+                                                       data-from="{{ start_date|date:'m/d/Y' }}"
+                                                       data-to="{{ end_date|date:'m/d/Y' }}">
                                                 {% else %}
                                                     <input type="text"
                                                        class="form-control rangepicker"
                                                        name="{{ page }}_range"
                                                        data-format="yyyy-mm-dd"
-                                                       value="{{ last_year|date:'m/d/Y' }} - {% now 'm/d/Y' %}"
-                                                       data-from="{{ last_year|date:'m/d/Y' }}"
-                                                       data-to="{% now 'm/d/Y' %}">
+                                                       value="{{ start_date|date:'m/d/Y' }} - {{ end_date|date:'m/d/Y' }}"
+                                                       data-from="{{ start_date|date:'m/d/Y' }}"
+                                                       data-to="{{ end_date|date:'m/d/Y' }}">
                                                 {% endif %}
                                             </label>
                                             <input type="hidden" name="interest" value="{{ page }}">
@@ -73,19 +74,32 @@
                                     <div class="col-lg-6 col-md-5 col-sm-5">
                                         <p class="float-right">
                                             {% if page == 'monthly' %}
-                                                Month to-date earnings as at {% now "dS F" %} is
+                                                Month to-date earnings as at {{ prev_day|date:'dS F' }} is
                                                 <span class="font-lato size-20 weight-800">
-                                                    TZS {{ month|default:0 }}/=
+                                                    {% if month_to_date_bonus is None %}
+                                                        {% money_localize 0 'TZS' %}
+                                                    {% else %}
+                                                        {% money_localize month_to_date_bonus 'TZS' %}
+                                                    {% endif %}
+                                                </span>
+                                            {% elif page == 'total' %}
+                                                Total earnings since inception:
+                                                <span class="font-lato size-20 weight-800">
+                                                    {% if month_to_date_bonus is None %}
+                                                        {% money_localize 0 'TZS' %}
+                                                    {% else %}
+                                                        {% money_localize month_to_date_bonus 'TZS' %}
+                                                    {% endif %}
                                                 </span>
                                             {% endif %}
                                         </p>
                                     </div>
                                 </div>
-                                <table id="earningsTable" class="table table-vertical-middle nomargin">
+                                <table id="earningsTable" class="table table-striped table-bordered table-hover">
                                     <thead>
                                         <tr>
                                             {% if page == 'rates' %}
-                                                <th>Month</th>
+                                                <th>Date</th>
                                                 <th>Rate(%)</th>
                                             {% elif page == 'daily' %}
                                                 <th>Date</th>
@@ -117,7 +131,7 @@
                                         {% elif page == 'monthly' %}
                                             {% for bonus in bonuses %}
                                             <tr>
-                                                <td>{{ bonus.month }}</td>
+                                                <td>{{ bonus.month|date:'M Y' }}</td>
                                                 <td>TZS {{ bonus.bonus }}</td>
                                             </tr>
                                             {% endfor %}
@@ -130,7 +144,7 @@
                                                     </tr>
                                                 {% else %}
                                                     <tr>
-                                                        <td>{{ entry.time|date:"F" }}</td>
+                                                        <td>{{ entry.time|date:"F Y" }}</td>
                                                         <td>TZS {{ entry.cumulative }}</td>
                                                     </tr>
                                                 {% endif %}
@@ -214,7 +228,7 @@
                 {% elif page == 'daily' %}
                     labels: [{% for bonus in bonuses %}'{{bonus.full_timestamp|date:'d/M'}}',{% endfor %}],
                 {% elif page == 'monthly' %}
-                    labels: [{% for bonus in bonuses %}'{{bonus.month}}',{% endfor %}],
+                    labels: [{% for bonus in bonuses %}'{{bonus.month|date:'M Y'}}',{% endfor %}],
                 {% elif page == 'total' %}
                     labels: [{% for entry in history %}'{{entry.time|date:'F'}}',{% endfor %}],
                 {% else %}
