--- a/fimco/fimcosite/templates/login.html
+++ b/fimco/fimcosite/templates/login.html
@@ -169,5 +169,5 @@
 {% endblock %}
 
 {% block scripts %}
-    <script type="text/javascript" src="/static/js/login.js"/>
+    <script type="text/javascript" src="/static/js/login.js"></script>
 {% endblock %}
