--- a/fimco/fimcosite/templates/registration.html
+++ b/fimco/fimcosite/templates/registration.html
@@ -28,7 +28,7 @@
             </div>
             <div class="row">
                 {% if form_data %}
-                    <div class="col-xs-12">
+                    <div class="col-lg-12 col-xs-12">
                         <div class="box-static box-transparent box-bordered p-30">
                             <div class="box-title mb-30">
                                 <h2 class="fs-20">Preview Information</h2>
