--- a/fimco/pochi/templates/pochi/main.html
+++ b/fimco/pochi/templates/pochi/main.html
@@ -42,20 +42,20 @@
                         <li><!-- home -->
                             <h3 style="color: #939ea4" class="size-14 margin-top-30">FIMCO Platform</h3>
                         </li>
-                        <li class="active"><!-- pochi -->
+                        <li class="active menu-open"><!-- pochi -->
                             <a href="#">
                                 <i class="fa fa-menu-arrow pull-right"></i>
                                 <i class="main-icon et-wallet"></i>
                                 <span>POCHI</span>
                             </a>
                             <ul>
-                                <li><!-- individual -->
+                                <li class="menu-open"><!-- individual -->
                                     <a href="#">
                                         <i class="fa fa-menu-arrow pull-right"></i>
                                         <i class="main-icon fa fa-user"></i>
                                         <span>My POCHI</span>
                                     </a>
-                                    <ul>
+                                    <ul style="display: block">
                                         <li><!-- dashboard -->
                                             <a href="{% url 'dashboard' %}">
                                                 <i class="fa fa-dashboard"></i>
