--- a/fimco/pochi/templates/pochi/earnings.html
+++ b/fimco/pochi/templates/pochi/earnings.html
@@ -9,23 +9,25 @@
     <section id="middle">
         <div id="content" class="dashboard padding-20">
             <div class="row">
-            {% if messages %}
-                {% for message in messages %}
-                    {% if message.level == DEFAULT_MESSAGE_LEVELS.INFO %}
-                        <div class="col-lg-6 col-xs-12 col-centered">
-                            {% if page == 'rates' %}
-                                <p><strong>{{ message }}</strong></p>
-                            {% elif page == 'daily' %}
-                                <p><strong>You have not earned anything yet. Please invest to earn!</strong></p>
-                            {% elif page == 'monthly' %}
-                                <p><strong>You have not earned anything yet. Please invest to earn!</strong></p>
-                            {% elif page == 'total' %}
-                                <p><strong>You have not earned anything yet. Please invest to earn!</strong></p>
-                            {% endif %}
+                <div id="info" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+                    <div class="modal-dialog modal-sm">
+                        <div class="modal-content">
+                            <div class="modal-body modal-info text-center">
+                                {% if page == 'rates' %}
+                                    <p><strong><i class="glyphicon glyphicon-info-sign"></i> {{ message }}</strong></p>
+                                {% else %}
+                                    <p>
+                                        <strong>
+                                            <i class="glyphicon glyphicon-exclamation-sign"></i>
+                                            You have not earned anything yet. Please invest to earn!
+                                        </strong>
+                                    </p>
+                                {% endif %}
+                                <button type="button" class="btn btn-info" data-dismiss="modal">OK</button>
+                            </div>
                         </div>
-                    {% endif %}
-                {% endfor %}
-            {% endif %}
+                    </div>
+                </div>
             </div>
             <div class="row">
                 <div class="col-xs-12">
@@ -205,6 +207,7 @@
     <script type="text/javascript" src="https://cdn.datatables.net/v/bs/dt-1.10.16/r-2.2.1/sc-1.4.3/datatables.min.js">
     </script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
+    <script type="text/javascript" src="/static/pochi/plugins/bootstrap/js/bootstrap.min.js"></script>
     <script type="text/javascript">
         {% if page == 'rates' %}
             var id="ratesChart";
@@ -265,6 +268,13 @@
 
         $(document).ready(function() {
             $('input[name="{{ page }}_range"]').daterangepicker();
+            {% if messages %}
+                {% for message in messages %}
+                    {% if message.level == DEFAULT_MESSAGE_LEVELS.INFO %}
+                        $("#info").modal('show');
+                    {% endif %}
+                {% endfor %}
+            {% endif %}
         });
     </script>
 {% endblock %}
