--- a/fimco/pochi/templates/pochi/group_activity.html
+++ b/fimco/pochi/templates/pochi/group_activity.html
@@ -3,33 +3,37 @@
     <section id="middle">
         <div id="content" class="padding-20">
             <div class="row">
-            {% if messages %}
-                {% for message in messages %}
-                    {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
-                        <div class="col-lg-6 col-xs-12 col-centered">
-                            <div class="alert alert-danger margin-bottom-30 text-center">
-                                <p><strong>{{ message }}</strong></p>
-                                <button type="button" class="btn btn-danger" data-dismiss="alert">OK</button>
+                <div id="success" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+                    <div class="modal-dialog modal-sm">
+                        <div class="modal-content">
+                            <div class="modal-body modal-success text-center">
+                                <p><strong><i class="glyphicon glyphicon-thumbs-up"></i> {{ message }}</strong></p>
+                                <button type="button" class="btn btn-success" data-dismiss="modal">OK</button>
                             </div>
                         </div>
-                    {% elif message.level == DEFAULT_MESSAGE_LEVELS.INFO %}
-                        <div class="col-lg-6 col-xs-12 col-centered">
-                            <div class="alert alert-info margin-bottom-30 text-center">
-                                <p><strong>{{ message }}</strong></p>
-                                <a href="{% url 'confirm' %}" class="btn btn-info btn-sm margin-top-10">Proceed transfer</a>
-                                <a href="{{ request.META.HTTP_REFERER }}" class="btn btn-default btn-sm margin-top-10">Cancel</a>
+                    </div>
+                </div>
+                <div id="info" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+                    <div class="modal-dialog modal-sm">
+                        <div class="modal-content">
+                            <div class="modal-body modal-info text-center">
+                                <p><strong><i class="glyphicon glyphicon-info-sign"></i> {{ message }}</strong></p>
+                                <a href="{% url 'confirm' %}" class="btn btn-info btn-sm">Proceed transfer</a>
+                                <button type="button" class="btn btn-info" data-dismiss="modal">OK</button>
                             </div>
                         </div>
-                    {% else %}
-                        <div class="col-lg-6 col-xs-12 col-centered">
-                            <div class="alert alert-success margin-bottom-30 text-center">
-                                <p><strong>{{ message }}</strong></p>
-                                <button type="button" class="btn btn-success" data-dismiss="alert">OK</button>
+                    </div>
+                </div>
+                <div id="error" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+                    <div class="modal-dialog modal-sm">
+                        <div class="modal-content">
+                            <div class="modal-body modal-danger text-center">
+                                <p><strong><i class="glyphicon glyphicon-thumbs-down"></i> {{ message }}</strong></p>
+                                <button type="button" class="btn btn-danger" data-dismiss="modal">OK</button>
                             </div>
                         </div>
-                    {% endif %}
-                {% endfor %}
-            {% endif %}
+                    </div>
+                </div>
             </div>
             <div class="row">
                 <div class="col-lg-6 col-centered">
@@ -73,6 +77,7 @@
     </section>
 {% endblock %}
 {% block scripts %}
+    <script type="text/javascript" src="/static/pochi/plugins/bootstrap/js/bootstrap.min.js"></script>
     <script type="text/javascript">
         $('#account-section').hide();
         var choice = $("#account_choice");
@@ -85,6 +90,21 @@
                 $('#account-section').show();
                 $('#mobile-section').hide();
             }
+        });
+        $(document).ready(function(){
+            {% if messages %}
+                {% for message in messages %}
+                    {% if message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}
+                        $("#success").modal('show');
+                    {% elif message.level == DEFAULT_MESSAGE_LEVELS.INFO %}
+                        $("#info").modal('show');
+                    {% elif message.level == DEFAULT_MESSAGE_LEVELS.WARNING %}
+                        $("#warning").modal('show');
+                    {% elif message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
+                        $("#error").modal('show');
+                    {% endif %}
+                {% endfor %}
+            {% endif %}
         });
     </script>
 {% endblock %}
