--- a/fimco/pochi/templates/pochi/group_profile.html
+++ b/fimco/pochi/templates/pochi/group_profile.html
@@ -8,20 +8,16 @@
             <div class="sheet">
                 <div class="row">
                     <p class="lead">Current balance</p>
-                    <p class="balance">TZS {{ account.balance }}</p>
+                    <p class="balance">{{ account.current_balance }}</p>
                 </div>
                 <div class="row">
                     <div class="col-xs-6 headerDivider">
                         <p class="lead">Available</p>
-                        <p class="lead">TZS {{ account.balance }}</p>
+                        <p class="lead"> {{ account.available_balance }}</p>
                     </div>
                     <div class="col-xs-6">
                         <p class="lead">Monthly Interest to-date</p>
-                        {% if account.ts_balance %}
-                        <p class="lead"> TZS {{ account.ts_balance }}</p>
-                        {% else %}
-                        <p class="lead"> TZS 0.0</p>
-                        {% endif %}
+                        <p class="lead"> {{ account.bonus }}</p>
                     </div>
                 </div>
             </div>
@@ -36,9 +32,9 @@
                 </div>
             {% else %}
                 <div class="row margin-top-20 mid-align">
-                    <div class="col-xs-12 col-md-4 col-lg-3 col-lg-offset-4">
+                    <div class="col-xs-12 col-md-6 col-lg-4 col-md-offset-3 col-lg-offset-4">
                         <div class="alert alert-default margin-bottom-30">
-                            <strong>{{ group }} has no transactions!</strong>
+                            <strong>Group {{ group }} has no transactions!</strong>
                         </div>
                     </div>
                 </div>
